source/fitsio.d


int ffcsum (fitsfile* fptr, c_long nrec, c_ulong* sum, int* status);
void ffesum (c_ulong sum, int complm, char* ascii);
c_ulong ffdsum (char* ascii, int complm, c_ulong* sum);
int ffpcks (fitsfile* fptr, int* status);
int ffupck (fitsfile* fptr, int* status);
int ffvcks (fitsfile* fptr, int* datastatus, int* hdustatus, int* status);
int ffgcks (fitsfile* fptr, c_ulong* datasum, c_ulong* hdusum, int* status);

/*--------------------- define scaling or null values -------------*/
int ffpscl (fitsfile* fptr, double scale, double zeroval, int* status);
int ffpnul (fitsfile* fptr, LONGLONG nulvalue, int* status);
int fftscl (fitsfile* fptr, int colnum, double scale, double zeroval, int* status);
int fftnul (fitsfile* fptr, int colnum, LONGLONG nulvalue, int* status);
int ffsnul (fitsfile* fptr, int colnum, char* nulstring, int* status);

/*--------------------- get column information -------------*/
int ffgcno (
    fitsfile* fptr,
    int casesen,
    char* templt,
    int* colnum,
    int* status);
int ffgcnn (
    fitsfile* fptr,
    int casesen,
    char* templt,
    char* colname,
    int* colnum,
    int* status);

int ffgtcl (
    fitsfile* fptr,
    int colnum,
    int* typecode,
    c_long* repeat,
    c_long* width,
    int* status);
int ffgtclll (
    fitsfile* fptr,
    int colnum,
    int* typecode,
    LONGLONG* repeat,
    LONGLONG* width,
    int* status);
int ffeqty (
    fitsfile* fptr,
    int colnum,
    int* typecode,
    c_long* repeat,
    c_long* width,
    int* status);
int ffeqtyll (
    fitsfile* fptr,
    int colnum,
    int* typecode,
    LONGLONG* repeat,
    LONGLONG* width,
    int* status);
int ffgncl (fitsfile* fptr, int* ncols, int* status);
int ffgnrw (fitsfile* fptr, c_long* nrows, int* status);
int ffgnrwll (fitsfile* fptr, LONGLONG* nrows, int* status);
int ffgacl (
    fitsfile* fptr,
    int colnum,
    char* ttype,
    c_long* tbcol,
    char* tunit,
    char* tform,
    double* tscal,
    double* tzero,
    char* tnull,
    char* tdisp,
    int* status);
int ffgbcl (
    fitsfile* fptr,
    int colnum,
    char* ttype,
    char* tunit,
    char* dtype,
    c_long* repeat,
    double* tscal,
    double* tzero,
    c_long* tnull,
    char* tdisp,
    int* status);
int ffgbclll (
    fitsfile* fptr,
    int colnum,
    char* ttype,
    char* tunit,
    char* dtype,
    LONGLONG* repeat,
    double* tscal,
    double* tzero,
    LONGLONG* tnull,
    char* tdisp,
    int* status);
int ffgrsz (fitsfile* fptr, c_long* nrows, int* status);
int ffgcdw (fitsfile* fptr, int colnum, int* width, int* status);

/*--------------------- read primary array or image elements -------------*/
int ffgpxv (
    fitsfile* fptr,
    int datatype,
    c_long* firstpix,
    LONGLONG nelem,
    void* nulval,
    void* array,
    int* anynul,
    int* status);
int ffgpxvll (
    fitsfile* fptr,
    int datatype,
    LONGLONG* firstpix,
    LONGLONG nelem,
    void* nulval,
    void* array,
    int* anynul,
    int* status);
int ffgpxf (
    fitsfile* fptr,
    int datatype,
    c_long* firstpix,
    LONGLONG nelem,
    void* array,
    char* nullarray,
    int* anynul,
    int* status);
int ffgpxfll (
    fitsfile* fptr,
    int datatype,
    LONGLONG* firstpix,
    LONGLONG nelem,
    void* array,
    char* nullarray,
    int* anynul,
    int* status);
int ffgsv (
    fitsfile* fptr,
    int datatype,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    void* nulval,
    void* array,
    int* anynul,
    int* status);

int ffgpv (
    fitsfile* fptr,
    int datatype,
    LONGLONG firstelem,
    LONGLONG nelem,
    void* nulval,
    void* array,
    int* anynul,
    int* status);
int ffgpf (
    fitsfile* fptr,
    int datatype,
    LONGLONG firstelem,
    LONGLONG nelem,
    void* array,
    char* nullarray,
    int* anynul,
    int* status);
int ffgpvb (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ubyte nulval,
    ubyte* array,
    int* anynul,
    int* status);
int ffgpvsb (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    byte nulval,
    byte* array,
    int* anynul,
    int* status);
int ffgpvui (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ushort nulval,
    ushort* array,
    int* anynul,
    int* status);
int ffgpvi (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    short nulval,
    short* array,
    int* anynul,
    int* status);
int ffgpvuj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_ulong nulval,
    c_ulong* array,
    int* anynul,
    int* status);
int ffgpvj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_long nulval,
    c_long* array,
    int* anynul,
    int* status);
int ffgpvujj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ULONGLONG nulval,
    ULONGLONG* array,
    int* anynul,
    int* status);
int ffgpvjj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    LONGLONG nulval,
    LONGLONG* array,
    int* anynul,
    int* status);
int ffgpvuk (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    uint nulval,
    uint* array,
    int* anynul,
    int* status);
int ffgpvk (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    int nulval,
    int* array,
    int* anynul,
    int* status);
int ffgpve (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    float nulval,
    float* array,
    int* anynul,
    int* status);
int ffgpvd (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    double nulval,
    double* array,
    int* anynul,
    int* status);

int ffgpfb (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ubyte* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfsb (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    byte* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfui (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ushort* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfi (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    short* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfuj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_ulong* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_long* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfujj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ULONGLONG* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfjj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    LONGLONG* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfuk (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    uint* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfk (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    int* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfe (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    float* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgpfd (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    double* array,
    char* nularray,
    int* anynul,
    int* status);

int ffg2db (
    fitsfile* fptr,
    c_long group,
    ubyte nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    ubyte* array,
    int* anynul,
    int* status);
int ffg2dsb (
    fitsfile* fptr,
    c_long group,
    byte nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    byte* array,
    int* anynul,
    int* status);
int ffg2dui (
    fitsfile* fptr,
    c_long group,
    ushort nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    ushort* array,
    int* anynul,
    int* status);
int ffg2di (
    fitsfile* fptr,
    c_long group,
    short nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    short* array,
    int* anynul,
    int* status);
int ffg2duj (
    fitsfile* fptr,
    c_long group,
    c_ulong nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    c_ulong* array,
    int* anynul,
    int* status);
int ffg2dj (
    fitsfile* fptr,
    c_long group,
    c_long nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    c_long* array,
    int* anynul,
    int* status);
int ffg2dujj (
    fitsfile* fptr,
    c_long group,
    ULONGLONG nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    ULONGLONG* array,
    int* anynul,
    int* status);
int ffg2djj (
    fitsfile* fptr,
    c_long group,
    LONGLONG nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG* array,
    int* anynul,
    int* status);
int ffg2duk (
    fitsfile* fptr,
    c_long group,
    uint nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    uint* array,
    int* anynul,
    int* status);
int ffg2dk (
    fitsfile* fptr,
    c_long group,
    int nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    int* array,
    int* anynul,
    int* status);
int ffg2de (
    fitsfile* fptr,
    c_long group,
    float nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    float* array,
    int* anynul,
    int* status);
int ffg2dd (
    fitsfile* fptr,
    c_long group,
    double nulval,
    LONGLONG ncols,
    LONGLONG naxis1,
    LONGLONG naxis2,
    double* array,
    int* anynul,
    int* status);
